syntax = "proto3";
package grpc;
option java_multiple_files = true;
option java_generic_services = true;


message GrpcRequest {
  string drug = 1;
}

message GrpcResponse {
  string result = 1;
}

service GrpcService {
  rpc getDrug(GrpcRequest) returns (GrpcResponse);
}
